// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnLink renders correctly 1`] = `
<div>
  <a
    class="ant-btn ant-btn-default"
    href="/"
    tabindex="0"
  >
    <span>
      bar
    </span>
  </a>
</div>
`;

exports[`BtnLink text 1`] = `
<a
  class="ant-btn ant-btn-default"
  data-testid="foo"
  href="/foo"
  tabindex="0"
>
  <span>
    bar
  </span>
</a>
`;
